CPP：第二章试验代码

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,9 @@
         "iostream": "cpp",
         "ostream": "cpp",
         "iosfwd": "cpp",
-        "istream": "cpp"
+        "istream": "cpp",
+        "random": "cpp",
+        "typeinfo": "cpp",
+        "string": "cpp"
     }
 }
