CPP: String, Vector, Iterator, Array

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,7 @@
                 "-g",
                 "-Wall",
                 "-Wextra",
+                "-pedantic",
                 "-m32",
                 // "-m64",
                 "${file}",
